[tool.poetry]
name = "aoc23"
version = "1.0.0"
description = "Solutions for Advent of Code 2023"
authors = ["Edward Toroshchyn <dev@hades.name>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
portion = "^2.6.1"
requests = "^2.32.5"
pysocks = "^1.7.1"
numpy = "^2.2.6"
tomlkit = "^0.13.3"
networkx = "^3.1"
z3-solver = "^4.15.4.0"
cleo = "^2.1.0"

[tool.poetry.group.dev.dependencies]
pre-commit = "^4.5.0"
pytest = "^9.0.1"
ruff = "^0.14.5"
responses = "^0.25.8"
mypy = "^1.19.0"
types-networkx = "^3.6.0.20251127"
types-requests = "^2.32.4.20250913"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
line-length = 120
indent-width = 2
target-version = "py310"

[tool.ruff.lint]
select = ["B", "C4", "DTZ", "E", "F", "G", "I", "N", "UP", "W"]
