[project]
name = "aoc23"
version = "1.0.0"
description = "Solutions for Advent of Code 2023"
authors = [{ name = "Edward Toroshchyn", email = "dev@hades.name" }]
requires-python = ">=3.10,<4"
readme = "README.md"
dependencies = [
    "portion>=2.6.1,<3",
    "requests>=2.32.5,<3",
    "pysocks>=1.7.1,<2",
    "numpy>=2.2.6,<3",
    "tomlkit>=0.13.3,<0.14",
    "networkx>=3.1,<4",
    "z3-solver>=4.15.4.0,<5",
    "cleo>=2.1.0,<3",
]

[dependency-groups]
dev = [
    "pre-commit>=4.3.0,<5",
    "pytest>=9.0.1,<10",
    "ruff>=0.14.5,<0.15",
    "responses>=0.25.8,<0.26",
    "mypy>=1.19.0,<2",
    "types-networkx>=3.6.0.20251127,<4",
    "types-requests>=2.32.4.20250913,<3",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
line-length = 120
indent-width = 2
target-version = "py310"

[tool.ruff.lint]
select = ["B", "C4", "DTZ", "E", "F", "G", "I", "N", "UP", "W"]
